# GitSardine

./: ACTIONS.md  CMakeLists.txt  DATA_MODELS.md  FEATURES.md  GITSARDINE.md  ICONS.md  IMPLEMENTATION_PLAN.md  ROADMAP.md  START.md  VIEWS.md  flake.nix  install.sh  justfile
agents/: FEATURE_AGENT.md  FEATURE_MANAGER.md  PROJECT_MANAGER.md  REVIEWER.md  VIEW_AGENT.md  VIEW_MANAGER.md
contrib/: build.sh  install.sh
resources/icons/: arrow_circle_315.h  arrow_curve_180_left.h  arrow_skip_090.h  arrow_skip_270.h  cross.h  cross_button.h  disk_minus.h  disk_plus.h  document.h  drive.h  drive_download.h  drive_upload.h  exclamation_red.h  folder_horizontal.h  icons.h  navigation_000_button_white.h  navigation_180_button_white.h  spin_1.h  spin_2.h  spin_3.h  spin_4.h
src/: main.cpp
src/config/: Config.cpp  Config.h
src/controller/: AppController.cpp  AppController.h
src/core/: Result.h
src/git/: GitRepository.cpp  GitRepository.h  GitStatus.h
src/models/: FolderTreeModel.cpp  FolderTreeModel.h  RepoModel.cpp  RepoModel.h
src/screens/: MainScreen.cpp  MainScreen.h
src/widgets/: BranchSelector.cpp  BranchSelector.h  ChangesTreeWidget.cpp  ChangesTreeWidget.h  DiffViewerDialog.cpp  DiffViewerDialog.h  RepoTreeWidget.cpp  RepoTreeWidget.h  SetupDialog.cpp  SetupDialog.h  StatusBar.cpp  StatusBar.h
src/workers/: GitWorker.cpp  GitWorker.h
tests/: test_tree.cpp
